tests/snapshots/ui__macro_error_with_line_column_info.snap
---
source: tests/ui.rs
expression: result.unwrap_err().emit_string().unwrap()
---
error: Could not find module 'undefined'. Searched `.`.
  ┌─ test:1:1
  │
1 │ import! undefined
  │ ^^^^^^^^^^^^^^^^^


